--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -179,11 +179,6 @@
     },
     "misc": {
       "@value": "Miscellaneous",
-      "muteThePhantoms": {
-        "@value": "Mute the Phantoms",
-        "desc": "Mutes all phantoms making them not induce ear pain.",
-        "warning": "<yellow>SkyOcean mutes the phantom sounds by default, if you wish to change this open the config and search for <gold>Mute the Phantoms</gold>!"
-      },
       "ministerInCalendar": {
         "@value": "Minister in Calendar",
         "desc": "Adds a current minister next to the mayor in the calendar."
@@ -305,6 +300,18 @@
       "storage_preview": {
         "@value": "Storage Preview",
         "desc": "Previews the contents of your backpacks and ender chest in the tooltip."
+      }
+    },
+    "galatea": {
+      "@value": "Galatea",
+      "muteThePhantoms": {
+        "@value": "Mute the Phantoms",
+        "desc": "Mutes all phantoms making them not induce ear pain.",
+        "warning": "<yellow>SkyOcean mutes the phantom sounds by default, if you wish to change this open the config and search for <gold>Mute the Phantoms</gold>!"
+      },
+      "shulkerOverwrite": {
+        "@value": "Retexture shulker",
+        "desc": "Recolors the shulkers to make them more visible."
       }
     }
   },
