feat: compact level bar

--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -292,7 +292,9 @@
         "@value": "Lore Modifications",
         "desc": [
           "All items that have any modification present in the lore are prefixed with <color #355AA0>\uD83C\uDF0A</color>",
-          "To list all modifications that are present press <gray>shift</gray>."
+          "To list all modifications that are present press <gray>shift</gray>.",
+          "",
+          "Some of the settings may include examples, <italic><gray>hover</gray></italic> them to see them."
         ]
       },
       "drill_modifications": {
@@ -300,17 +302,161 @@
         "desc": [
           "Compacts the installed upgrade parts into one line each.",
           "",
-          "§cOff:",
-          "<gray>Fuel Tank: <red>Not Installed",
-          "<gray>Increases fuel capacity with part installed.",
+          "Example: <green><hover show_text '<color #355AA0>\uD83C\uDF0A</color><aqua> Heated Divans Drill</aqua>",
+          "<dark_gray>Breaking Power 10</dark_gray>",
           "",
-          "§aOn:",
-          "<gray>Fuel Tank: <red>Not Installed"
+          "<gray>Damage: <red>+75</red></gray>",
+          "<gray>Mining Speed: <green>+7,320</green> <gold>[+500]</gold> <blue>[+50] (+70)</blue> <light_purple>(+240)</light_purple></gray>",
+          "<gray>Pristine: <green>+4.7</green> <light_purple>(+2.2)</light_purple></gray>",
+          "<gray>Mining Fortune: <green>+340</green> <blue>[+5] (+25)</blue> <light_purple>(+120)</light_purple></gray>",
+          "<gray>Gemstone Fortune: <green>+50</green></gray>",
+          "<gray>Mining Wisdom: <green>+10</green></gray>",
+          "<gold>[⸕] [⸕] [<green>☘</green>] [<green>☘</green>] [<yellow>✦</yellow>]</gold>",
+          "",
+          "<light_purple><bold>Flowstate III</bold></light_purple>",
+          "<blue>Compact X</blue>",
+          "<blue>Efficiency X</blue>",
+          "<blue>Experience IV</blue>",
+          "<blue>Fortune IV</blue>",
+          "<blue>Lapidary V</blue>",
+          "<blue>Paleontologist V</blue>",
+          "<blue>Prismatic V</blue>",
+          "",
+          "<gray>Fuel Tank: <blue>Perfectly-Cut Fuel Tank</blue></gray>",
+          "<gray>Drill Engine: <blue>Amber-Polished Drill Engine</blue></gray>",
+          "<gray>Upgrade Module: <blue>Blue Cheese Goblin Omelette</blue></gray>",
+          "",
+          "<gray>Fuel: </gray><dark_green>69,801</dark_green><dark_gray>/100k</dark_gray>",
+          "",
+          "<blue>Heated Bonus</blue>",
+          "<gray>Grants <gold>+1☘ Mining Fortune</gold> and <gold>+4⸕</gold></gray>",
+          "<gray><gold>Mining Speed</gold> per <red>1♨ Heat</red> you have.</gray>",
+          "",
+          "<dark_gray><bold>*</bold> Co-op Soulbound <bold>*</bold></dark_gray>",
+          "<aqua><bold><obfuscated>a</obfuscated> DIVINE DRILL <obfuscated>a</obfuscated></bold></aqua>'>On</hover></green>/<hover show_text '<aqua>Heated Divans Drill</aqua>",
+          "<dark_gray>Breaking Power 10</dark_gray>",
+          "",
+          "<gray>Damage: <red>+75</red></gray>",
+          "<gray>Mining Speed: <green>+7,320</green> <gold>[+500]</gold> <blue>[+50] (+70)</blue> <light_purple>(+240)</light_purple></gray>",
+          "<gray>Pristine: <green>+4.7</green> <light_purple>(+2.2)</light_purple></gray>",
+          "<gray>Mining Fortune: <green>+340</green> <blue>[+5] (+25)</blue> <light_purple>(+120)</light_purple></gray>",
+          "<gray>Gemstone Fortune: <green>+50</green></gray>",
+          "<gray>Mining Wisdom: <green>+10</green></gray>",
+          "<gold>[⸕] [⸕] [<green>☘</green>] [<green>☘</green>] [<yellow>✦</yellow>]</gold>",
+          "",
+          "<light_purple><bold>Flowstate III</bold></light_purple>",
+          "<blue>Compact X</blue>",
+          "<blue>Efficiency X</blue>",
+          "<blue>Experience IV</blue>",
+          "<blue>Fortune IV</blue>",
+          "<blue>Lapidary V</blue>",
+          "<blue>Paleontologist V</blue>",
+          "<blue>Prismatic V</blue>",
+          "",
+          "<green>Perfectly-Cut Fuel Tank</green>",
+          "<dark_green>100,000 Max Fuel Capacity<dark_green>",
+          "<green>-10% Pickaxe Ability Cooldown</green>",
+          "",
+          "<green>Amber-Polished Drill Engine</green>",
+          "<gold>+600⸕ Mining Speed</gold>",
+          "<gold>+100☘ Mining Fortune</gold>",
+          "",
+          "<green>Blue Cheese Goblin Omelette Part</green>",
+          "<gray>Adds <green>+1 Level</green> to all of your unlocked <purple>Heart of</purple></gray>",
+          "<gray><purple>the Mountain</purple> perks.</gray>",
+          "",
+          "<gray>Fuel: </gray><dark_green>69,801</dark_green><dark_gray>/100k</dark_gray>",
+          "",
+          "<blue>Heated Bonus</blue>",
+          "<gray>Grants <gold>+1☘ Mining Fortune</gold> and <gold>+4⸕</gold></gray>",
+          "<gray><gold>Mining Speed</gold> per <red>1♨ Heat</red> you have.</gray>",
+          "",
+          "<dark_gray><bold>*</bold> Co-op Soulbound <bold>*</bold></dark_gray>",
+          "<aqua><bold><obfuscated>a</obfuscated> DIVINE DRILL <obfuscated>a</obfuscated></bold></aqua>'><red>Off</red></hover>"
         ]
       },
       "dungeon_quality": {
         "@value": "Dungeon Quality",
-        "desc": "Adds the dungeon quality to the lore."
+        "desc": [
+          "Adds the dungeon quality to the lore.",
+          "",
+          "Example: <green><hover '<color #355AA0>\uD83C\uDF0A</color> <gold>Smart Skeleton Master Leggings</gold>",
+          "<gray>Item Quality: <red>50<gray>/</gray>50</red></gray>",
+          "<gray>Tier: <light_purple>8<gray>/</gray>10</light_purple></gray>",
+          "<gray>Gear Score: <light_purple>555</light_purple> <dark_gray>(2543)</dark_gray></gray>",
+          "<gray>Crit Chance: <red>+5%</red> <dark_gray>(+5.25%)</dark_gray></gray>",
+          "<gray>Crit Damage: <red>+57%</red> <dark_gray>(+271.32%)</dark_gray></gray>",
+          "<gray>Health: <green>+155</green> <blue>(+15)</blue> <dark_gray>(+737.8)</dark_gray></gray>",
+          "<gray>Defense: <green>+139</green> <blue>(+15)</blue> <dark_gray>(+661.64)</dark_gray></gray>",
+          "<gray>Intelligence: <green>+100</green> <blue>(+100)</blue> <dark_gray>(+476)</dark_gray></gray>",
+          "",
+          "<blue>Growth V, Protection V, Thorns III</blue>",
+          "",
+          "<gray>Increase the damage you deal with",
+          "arrows by <red>5%</red>.</gray>",
+          "<gold>Full Set Bonus: Skeleton Master</gold><gray> (0/4)</gray>",
+          "<gray>Increase the damage you deal with",
+          "arrows by <red>25%</red>.",
+          "",
+          "<green>This item is Undead ༕!<green>",
+          "",
+          "<gold><bold>LEGENDARY DUNGEON LEGGINGS</bold></gold>'>On</hover></green>/<red><hover '<gold>Smart Skeleton Master Leggings</gold>",
+          "<gray>Gear Score: <light_purple>555</light_purple> <dark_gray>(2543)</dark_gray></gray>",
+          "<gray>Crit Chance: <red>+5%</red> <dark_gray>(+5.25%)</dark_gray></gray>",
+          "<gray>Crit Damage: <red>+57%</red> <dark_gray>(+271.32%)</dark_gray></gray>",
+          "<gray>Health: <green>+155</green> <blue>(+15)</blue> <dark_gray>(+737.8)</dark_gray></gray>",
+          "<gray>Defense: <green>+139</green> <blue>(+15)</blue> <dark_gray>(+661.64)</dark_gray></gray>",
+          "<gray>Intelligence: <green>+100</green> <blue>(+100)</blue> <dark_gray>(+476)</dark_gray></gray>",
+          "",
+          "<blue>Growth V, Protection V, Thorns III</blue>",
+          "",
+          "<gray>Increase the damage you deal with",
+          "arrows by <red>5%</red>.</gray>",
+          "<gold>Full Set Bonus: Skeleton Master</gold><gray> (0/4)</gray>",
+          "<gray>Increase the damage you deal with",
+          "arrows by <red>25%</red>.",
+          "",
+          "<green>This item is Undead ༕!<green>",
+          "",
+          "<gold><bold>LEGENDARY DUNGEON LEGGINGS</bold></gold>'>Off</red>"
+        ]
+      },
+      "compact_level_bars": {
+        "@value": "Compact Level Bars",
+        "desc": [
+          "Compacts the bars in the skyblock levels menu into one line, making them fit on smaller screens.",
+          "",
+          "Example: <green><hover '<dark_aqua>Dungeon Tasks</dark_aqua>",
+          "<dark_gray>3 Tasks</dark_gray>",
+          "",
+          "<gray>All Dungeon related XP Tasks</gray>",
+          "",
+          "<yellow>▶ Catacombs Level Up</yellow> <dark_gray>(<red>980</red>/<green>1.220</green> <aqua>XP</aqua>)</dark_gray>",
+          "<yellow>▶ Class Level Up</yellow> <dark_gray>(<red>768</red>/<green>1.000</green> <aqua>XP</aqua>)</dark_gray>",
+          "<yellow>▶ Complete Dungeons</yellow> <dark_gray>(<green>540</green>/<green>540</green> <aqua>XP</aqua>)</dark_gray>",
+          "",
+          "<gray>Progress to Complete Category:</gray> <gold>82.9%</gold>",
+          "<gold><strikethrough>                     <white>    </white></strikethrough> <yellow>2,288</yellow>/<yellow>2,760 XP</yellow></gold>",
+          "",
+          "<yellow>Click to view tasks!</yellow>'>On</hover></green>/<red><hover '<dark_aqua>Dungeon Tasks</dark_aqua>",
+          "<dark_gray>3 Tasks</dark_gray>",
+          "",
+          "<gray>All Dungeon related XP Tasks</gray>",
+          "",
+          "<yellow>▶ Catacombs Level Up</yellow>",
+          "<strikethrough><green>                     </green><white>    </white></strikethrough> <green>980<dark_gray>/</dark_gray>1,120 XP</green>",
+          "",
+          "<yellow>▶ Class Level Up</yellow>",
+          "<strikethrough><green>                    </green><white>     </white></strikethrough> <green>768<dark_gray>/</dark_gray>1,000 XP</green>",
+          "",
+          "<yellow>▶ Complete Dungeons</yellow>",
+          "<strikethrough><green>                         </green></strikethrough> <green>540<dark_gray>/</dark_gray>540 XP</green>",
+          "",
+          "<gray>Progress to Complete Category:</gray> <gold>82.9%</gold>",
+          "<gold><strikethrough>                     <white>    </white></strikethrough> <yellow>2,288</yellow>/<yellow>2,760 XP</yellow></gold>",
+          "",
+          "<yellow>Click to view tasks!</yellow>'>Off</hover></red>"
+        ]
       },
       "storage_preview": {
         "@value": "Storage Preview",
