feat: hide other bobbers
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -255,6 +255,10 @@
         "@value": "Bobber Fix",
         "desc": "Fixes bobbers rubberbanding when fishing."
       },
+      "hide_other_bobbers": {
+        "@value": "Hide Other Bobbers",
+        "desc": "Hides other players' bobbers, making it easier to see your own."
+      },
       "hotspot": {
         "@value": "Hotspot Highlight",
         "desc": "All settings for the hotspot highlight.",
