feat: hide entity fire

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -218,6 +218,10 @@
         "@value": "Show Hidden Pet Candy",
         "desc": "Hypixel hides the pet candy line once its max level, this feature re-adds the line."
       },
+      "hideEntityFire": {
+        "@value": "Hide entity fire",
+        "desc": "Removes the fire effect from all entities."
+      },
       "itemSearch": {
         "@value": "Item Search",
         "itemHighlight": {
