feat: white non messages
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -168,6 +168,10 @@
         "@value": "Profile in Chat",
         "desc": "Show the profile icon in chat messages."
       },
+      "white_non_message": {
+        "@value": "White Non-Message",
+        "desc": "Changes the color from nons to white instead of gray."
+      },
       "piggy_repair_helper": {
         "@value": "Piggy Repair Helper",
         "desc": "Sends a chat message to get 8 Enchanted Pork from sacks when the piggy bank breaks."
