fix: profile in chat not working (#73)
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -166,7 +166,8 @@
       "@value": "Chat",
       "profile_in_chat": {
         "@value": "Profile in Chat",
-        "desc": "Show the profile icon in chat messages."
+        "desc": "Show the profile icon in chat messages.",
+        "warning": "<yellow>SkyOcean by default adds the profile emblem into chat messages, if you wish to change this open the config and search for <gold>Profile in Chat</gold>!"
       },
       "white_non_message": {
         "@value": "White Non-Message",
