feat: font datagen and mob icon (#79)
* feat: add font datagen and first mob icon version

* feat: png datagen, and also support for boss types

* feat: add short versions

* fix: ascent being wrong

* feat: add config stuff :3

* detekt

* feat: mod icon pack settings

* meow

* requested changes

* changes

* detekt

* fix: not working on glacial mobs

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* Update en_us.json

---------

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>
Co-authored-by: Gravy Boat <gravy@thatgravyboat.tech>
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -287,6 +287,27 @@
           "@value": "Others",
           "desc": "Only applies to other players."
         }
+      },
+      "mob_icons": {
+        "@value": "Mob Icons",
+        "enabled": {
+          "@value": "Enable Mob Icons",
+          "desc": [
+            "Replaces the hypixel mob icons with a spelled out version.",
+            "<red>This requires a nametag update, meaning it doesn't refresh instantly!</red>"
+          ]
+        },
+        "display_type": {
+          "@value": "Display type",
+          "desc": "Changes the way the mob icons are displayed."
+        },
+        "colors": {
+          "@value": "Individual colors",
+          "desc": [
+            "Overwrites the colors for the different mob icons.",
+            "The default <white>#FFFFFF</white> means that it doesn't get changed at all."
+          ]
+        }
       }
     },
     "fishing": {
