--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -268,7 +268,15 @@
         "preserve_search": {
           "@value": "Preserve Search",
           "desc": "When reopening the item search, it will keep the previous search input and category instead of clearing them."
+        },
+        "museumIntegration": {
+          "@value": "Museum integration",
+          "desc": "Changes the museum to highlight items that are found on your profile, furthermore it also tells you which items you can craft and which ones are not craftable at all."
         }
+      },
+      "museumArmourPieces": {
+        "@value": "Show museum armour pieces",
+        "desc": "Displays all pieces required to finish an armor set in the tooltip in the museum."
       },
       "crafthelper": {
         "@value": "Craft Helper",
