feat: add resource pack datagen and add ch blocks to fake block list (#93)

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -88,6 +88,10 @@
           "desc": [
             "Allows resource packs to change the appearance of gemstones."
           ]
+        },
+        "hollows": {
+          "@value": "Retexture Hollows",
+          "desc": "Allows resource packs to change the appearance of most hardstone blocks and ores in the hollows."
         }
       },
       "mineshaft": {
