refactor?: add support for changing glacite dwarven metals (umber & tungsten) block models

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -74,7 +74,7 @@
         "glacite": {
           "@value": "Retexture Glacite Tunnel blocks",
           "desc": [
-            "Allows resource packs to change the appearance of glacite tunnel blocks."
+            "Allows resource packs to change the appearance of glacite tunnel blocks & dwarven metals."
           ]
         },
         "mist": {
