--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -297,6 +297,10 @@
           "@value": "Disable tracking for target",
           "desc": "Prevents the craft helper from showing any progress for the root node, making it simpler for certain items."
         },
+        "itemSources": {
+          "@value": "Allowed item sources",
+          "desc": "Select sources from which the craft helper can count items"
+        },
         "position": {
           "@value": "Position",
           "desc": "Craft helper position inside the inventory."
