feat: add first museum helper things (#88)
* feat: add first museum helper things

* feat: use kt context

* feat: finish items, and add first amour stuff

* hopefully fix build issues

* feat: craft helper and armour tooltip

* feat: add config

* Update Utils.kt

Co-authored-by: ThatGravyBoat <gravy@thatgravyboat.tech>

* changes

* meow

* baselineπ

* requested changes

* grrr

* disable detekt

* comments

* fixπ

* fix armor of the pack and mangrove equipment

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* changes

---------

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>
Co-authored-by: ThatGravyBoat <gravy@thatgravyboat.tech>
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -281,10 +281,18 @@
           "@value": "Preserve Search",
           "desc": "When reopening the item search, it will keep the previous search input and category instead of clearing them."
         },
+        "museumIntegration": {
+          "@value": "Museum integration",
+          "desc": "Changes the museum to highlight items that are found on your profile, furthermore it also tells you which items you can craft and which ones are not craftable at all."
+        },
         "warp_to_island": {
           "@value": "Warp to island",
           "desc": "Automatically warp to island if you click an item that is on it."
         }
+      },
+      "museumArmourPieces": {
+        "@value": "Show museum armour pieces",
+        "desc": "Displays all pieces required to finish an armor set in the tooltip in the museum."
       },
       "crafthelper": {
         "@value": "Craft Helper",
