--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -17,7 +17,7 @@
         "desc": [
           "The mod may change the appearance of an item (or other visual components), by for example manipulating it's tooltip.",
           "",
-          "If such a modification is present there will be a <color #355AA0>\uD83C\uDF0A</color> prefix, this is done to help identify the origin of any changes and therefore can't be disabled."
+          "If such a modification is present there will be a <color #355AA0>\uD83C\uDF0A</color> prefix (or whatever modify indicator is selected), this is done to help identify the origin of any changes and therefore is discouraged to be disabled."
         ]
       },
       "text_shadow": {
@@ -435,7 +435,7 @@
       "modifications": {
         "@value": "Lore Modifications",
         "desc": [
-          "All items that have any modification present in the lore are prefixed with <color #355AA0>\uD83C\uDF0A</color>",
+          "All items that have any modification present in the lore are indicated with the selected modify indicator.",
           "To list all modifications that are present press <gray>shift</gray>.",
           "",
           "Some of the settings may include examples, <italic><gray>hover</gray></italic> them to see them."
